--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
                         android:layout_width="0dp"
                         android:layout_height="160dp"
                         android:layout_weight="1"
-                        android:background="@color/primary"
+                        android:background="@color/accent"
                         android:orientation="vertical">
 
                         <TextView
