--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="320dp"
-            android:layout_height="180dp"
+            android:layout_width="300dp"
+            android:layout_height="160dp"
             android:layout_gravity="center"
             android:background="@drawable/iv_dashboard" />
 
@@ -104,7 +104,7 @@
 
                 </LinearLayout>
 
-<!--                &lt;!&ndash;Bloque 3&ndash;&gt;
+<!--            Bloque 3
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -133,7 +133,7 @@
 
                 </LinearLayout>
 
-                &lt;!&ndash;Bloque 4&ndash;&gt;
+                 Bloque 4
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
