--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,27 +4,27 @@
 
     <item
         android:id="@+id/share"
-        android:title="Share" />
+        android:title="@string/Share" />
 
     <item
         android:id="@+id/about"
-        android:title="About" />
+        android:title="@string/About" />
 
     <item
         android:id="@+id/exit"
-        android:title="Exit" />
+        android:title="@string/Exit" />
 
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
-        android:title="Search"
-        App:showAsAction="always" />
+        android:title="@string/Search"
+        App:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/setting"
-        android:icon="@drawable/ic_settings"
-        android:title="Setting"
-        App:showAsAction="always" />
+        android:id="@+id/home"
+        android:icon="@drawable/ic_home"
+        android:title="@string/Home"
+        App:showAsAction="ifRoom" />
 
 
 </menu>
