--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@color/white"
     tools:context="com.codigo55.umovil.MainActivity">
+
+    <!--Inicio toolbar 1-->
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,6 +21,8 @@
         app:titleMarginStart="40dp">
 
     </android.support.v7.widget.Toolbar>
+
+    <!--Fin toolbar 1-->
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -50,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:background="#fff"
+                    android:background="@color/white"
                     android:baselineAligned="false"
                     android:elevation="6dp"
                     android:orientation="horizontal"
